--- a/templates/Manager/index.html
+++ b/templates/Manager/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 Admins Home page<br>
-<a href="{% url 'add' %}"><input type="button" id="Add" value="ADD" ></a><br>
-<a href="{% url 'remove' %}"><input type="button" id="remove" value="Remove" ></a>
+<a href="{% url 'add_food' %}"><input type="button" id="Add" value="ADD" ></a><br>
+<a href="{% url 'remove_food' %}"><input type="button" id="remove" value="Remove" ></a><br>
+<a href="{% url 'update_food' %}"><input type="button" id="update" value="Update" ></a>
 </body>
 </html>
