--- a/templates/history/history.html
+++ b/templates/history/history.html
@@ -3,60 +3,49 @@
 <!DOCTYPE html>
    <html>
       <head>
-        <h1> neeha{{d}}</h1>
+
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
           <link rel="stylesheet" type="text/css" href="{% static 'history/main.css' %}">
-          <script type="text/javascript">
-              window.onload = function () {
-
-              var chart = new CanvasJS.Chart("chartContainer", {
-              	theme: "light1", // "light2", "dark1", "dark2"
-              	animationEnabled: false, // change to true
-              	title:{
-              		text: "Basic Column Chart"
-              	},
-                var d1={};
-                {% for key, value in d.items %}
-
-                  {% endfor %}
-
-              	data: [
-              	{
-              		// Change type to "bar", "area", "spline", "pie",etc.
-              		type: "column",
-                  {
-
-                      dataPoints:
-                      [
-
-                      ]
 
 
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+            <script type="text/javascript">
+
+            google.charts.load('current', {'packages':['corechart']});
+            google.charts.setOnLoadCallback(drawChart);
 
 
+            function drawChart() {
+              var data = google.visualization.arrayToDataTable([
+              ['Task', 'Hours per Day'],
+              {% for key,value in d.items%}
+              ['{{key}}',{{value}}],
+              {%endfor%}
+            ]);
 
-              });
-              chart.render();
 
-              }
-      </script>
-        <h1>harika</h1>
+              var options = {'title':'statistics of food items', 'width':300, 'height':200};
+
+
+              var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+              chart.draw(data, options);
+            }
+          </script>
+
      </head>
     <body>
        <div class="menu">
        </div>
 
-<div id="chartContainer" style="height: 370px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
 
     <table>
          <tr>
             <td>
               <div class="box1">
-               <h3 class="text1"> ANALYSIS OF BUSINESS</h3>
-               <br><br><br>
+               <h3 class="text1">STATISTICS OF FOODITEMS</h3>
 
-               <p>FROM:<input type="date" data-date-inline-picker="true" />TO:<input type="date" data-date-inline-picker="true" /></p>
+             <br><br><br>
+
 
                   <div class="date1">
                   <form method="POST" autocomplete="off">
@@ -64,20 +53,21 @@
                     {{form.as_p}}
                     {% csrf_token %}
                   </div>
+                  <br><br><br>
+                  <div id="piechart"></div>
+                  <div id="chartContainer" style="height: 370px; width: 10%;"></div>
+                  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
+
+
                   <div class="button1">
                  <input type="submit" class="btn btn-primary" value="submit">
                </div>
+             </div>
                </form>
-
-                 <div class="button3">
-                    <input type="submit" class="btn btn-primary" value="display">
-
-                   </div>
-              </div>
             </td>
             <td>
               <div class="box2">
-                <h3 class="text2"> STATISTICS OF FOOD ITEMS</h3>
+                <h3 class="text2"> ANALYSIS OF BUSINESS</h3>
                 <br><br><br>
                 <div class="date2">
                 <p>FROM:<input type="date" data-date-inline-picker="true" />TO:<input type="date" data-date-inline-picker="true" /></p>
@@ -85,13 +75,13 @@
                <div class="button2">
                <input type="submit" class="btn btn-primary" value="submit">
              </div>
-             <div class="button4">
-              <input type="submit" class="btn btn-primary" value="display">
-              </div>
             </div>
             </td>
         </tr>
       </table>
+
+
+
 
 
 
