--- a/templates/Manager/index.html
+++ b/templates/Manager/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 Admins Home page<br>
-<a href="{% url 'add_food' %}"><input type="button" id="Add" value="ADD" ></a><br><br>
-<a href="{% url 'remove_food' %}"><input type="button" id="remove" value="Remove" ></a><br><br>
-<a href="{% url 'update_food' %}"><input type="button" id="update" value="Update" ></a>
+<a href="{% url 'food_home' %}"><input type="button" id="Add" value="Add/Remove Food" ></a><br><br>
+<a href="{% url 'tables_home' %}"><input type="button" id="Add" value="Add/Remove/Update Tables" ></a><br><br>
 </body>
 </html>
