--- a/templates/Manager/index.html
+++ b/templates/Manager/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 Admins Home page<br>
-<a href="{% url 'food_home' %}"><input type="button" id="Add" value="Add/Remove Food" ></a><br><br>
-<a href="{% url 'tables_home' %}"><input type="button" id="Add" value="Add/Remove/Update Tables" ></a><br><br>
+<a href="{% url 'food_home' %}"><input type="button" id="Food" value="Add/Remove Food" ></a><br><br>
+<a href="{% url 'tables_home' %}"><input type="button" id="Tables" value="Add/Remove/Update Tables" ></a><br><br>
+<a href="{% url 'town_home' %}"><input type="button" id="Towns" value="Add/Remove Towns" ></a><br><br>
 </body>
 </html>
